Verification & desing & publish

--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
       <h1 class="hero-title fade-in">
         <span class="glitch" data-text="STRANGER TRADING">STRANGER TRADING</span>
       </h1>
-      <p class="hero-subtitle fade-in-delay">A kártyagyűjtők biztonságos csereterülete</p>
-      <div class="hero-image fade-in-delay-2">
-        <img src="img/collectoralbum.png" alt="Stranger Things Cards" />
-      </div>
+      <p class="hero-subtitle fade-in-delay" style="font-weight: 600;">A kártyagyűjtők biztonságos csereterülete</p>
       <a href="#about" class="cta-btn fade-in-delay-3">Fedezd fel</a>
     </div>
   </section>
@@ -58,36 +55,6 @@
     </div>
   </section>
 
-  <section id="cards" class="section-cards hidden"> 
-    <div class="container">
-      <h2 class="section-title reveal" data-text="Elérhető kártyák">Elérhető kártyák</h2>
-      <div class="search-bar reveal">
-        <input id="search" type="search" placeholder="🔎 Keresés: név, sorozat, tulajdonos..." />
-      </div>
-      <div id="cardsGrid" class="cards-grid" aria-live="polite">
-        </div>
-    </div>
-  </section>
-
-  <div id="tradeModal" class="modal" aria-hidden="true">
-    <div class="modal-content">
-      <button class="close-btn" id="modalClose">×</button>
-      <h2>Kérés elküldése</h2>
-      <div id="modalCardInfo"></div>
-      <form id="tradeForm">
-        <label for="yourCard">Te tulajdonában lévő kártya (opcionális)</label>
-        <input type="text" id="yourCard" placeholder="Pl. Eleven — Season 3" />
-        
-        <label for="message">Üzenet a tulajdonosnak</label>
-        <textarea id="message" rows="4" placeholder="Szia! Érdekelne a kártyád..."></textarea>
-        <div class="modal-actions">
-          <button type="submit" class="btn primary">Kérés küldése</button>
-          <button type="button" class="btn" id="modalCancel">Mégse</button>
-        </div>
-      </form>
-    </div>
-  </div>
-
   <footer class="site-footer">
     <div class="container">
       <div class="footer-content">
@@ -102,4 +69,4 @@
 
   <script src="js/app.js"></script>
 </body>
-</html>
+</html> 
