--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="hu" class="scroll-smooth">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Stranger Trading — Kártyacsere</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Creepster&family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Creepster&family=Inter:wght@300;400;600;800&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
   <nav class="navbar">
     <div class="nav-content">
@@ -16,8 +20,8 @@
         <small class="logo-sub">Trading</small>
       </div>
       <div class="nav-links" id="navLinks"> <a href="#hero">Főoldal</a>
-        <a href="#about">Rólunk</a>
-        <a href="login.html" id="authLink">Bejelentkezés</a> </div>
+        <a href="login.html" id="authLink">Bejelentkezés</a>
+      </div>
     </div>
   </nav>
 
@@ -69,4 +73,4 @@
 
   <script src="js/app.js"></script>
 </body>
-</html> 
+</html>
